crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__if__else.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/if/else.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (if
      true
      (print "good")
      (print "bad"))
   (if
      false
      (print "bad")
      (print "good"))
   (if
      false
      (expr nil)
      (block
         (print "block"))))

----- stderr -----
