crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__if__truth.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/if/truth.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (if
      false
      (print "bad")
      (print "false"))
   (if
      nil
      (print "bad")
      (print "nil"))
   (if
      true
      (print true)
      ∅)
   (if
      0.0
      (print 0.0)
      ∅)
   (if
      ""
      (print "empty")
      ∅))

----- stderr -----
